# parallel-ml-bench

./: .gitignore  .gitmodules  Dockerfile  README.md  cpp-exp-big.json  cpp-exp.json  exp-big.json  exp-extra.json  exp-hb.json  exp-ng.json  exp.json  exps_to_run.txt  filter-exps.py  filtered-exp-hb.json  generate-inputs  go-exp.json  init  java-exp.json  myrun  ocaml-exp.json  parrun.sh  report  report-big  report-cross  report-hb  report-mlton  report-shootout.py  report-tangle  report.py  run  run-big  run-cross-full  run-cross-small  run-mlton-full  run-mlton-small  run-small  run-small-test  run-tangle  run-tangle-full  run-tangle-small  (+4 more)
app/: report-mpl  report-runtime-stats
cpp/: Makefile  benchmark.hpp  benchmarkShared.hpp  bfs.cpp  bignum-add.cpp  bignum-add.h  cmdline.hpp  dedup-strings.cpp  delaunay.cpp  grep.cpp  grep.h  integrate.cpp  linearrec.cpp  linearrec.h  linefit.cpp  mcss.cpp  mcss.h  msort.cpp  nearest-nbrs.cpp  neighbors.h  new-tokens.cpp  nqueens.cpp  primes.cpp  primes.hpp  quickhull.cpp  sparse-mxv.cpp  tokens.cpp  tokens.h  wc.cpp
cross-full/: go-exp.json  java-exp.json  ocaml-exp.json
cross-small/: cpp-exp.json  go-exp.json  java-exp.json  mpl-exp.json  ocaml-exp.json
go/: Makefile  NOTES  go.mod  sort.go
inputs/: .gitignore
java/: Benchmark.java  CommandLineArgs.java  Dedup.java  DedupStrings.java  Filter.java  Linefit.java  LinefitAccum.java  MCSS.java  Makefile  Pair.java  Primes.java  ReadFile.java  SortLongs.java  SortStrings.java  SparseMxV.java  Tokenize.java  Tokens.java  TokensCheat.java  TokensOpt.java  Util.java  WCAccum.java
mlton-full/: exp.json
mlton-small/: exp.json
mpl/: .gitignore  (+8 more)
ocaml/: Makefile  dune
ocaml/bench/binarytrees5/: binarytrees5.ml
ocaml/bench/dedup_strings/: dedup_strings.ml
ocaml/bench/game_of_life/: game_of_life.ml
ocaml/bench/linefit_accum/: linefit_accum.ml
ocaml/bench/lu_decomp/: lu_decomp.ml
ocaml/bench/mcss/: mcss.ml
ocaml/bench/ms_queue/: Msqueue.ml  Msqueue.mli  ms_queue.ml
ocaml/bench/nbody/: nbody.ml  nbody_funcloop.ml
ocaml/bench/sparse_mxv/: sparse_mxv.ml
ocaml/bench/tokens/: tokens.ml
ocaml/bench/wc_accum/: wc_accum.ml
ocaml/lib/: Accumulate.ml  Accumulate.mli  Benchmark.ml  Tokenize.ml  Tokenize.mli  Util.ml  Util.mli  dune
(+462 files in other folders)
