(include_subdirs unqualified)

(executable
 (name msort_ints)
 (libraries cla seq merge benchmark util quicksort)
 (modules msort_ints)
 (modes native))

(executable
 (name msort_strings)
 (libraries cla seq merge benchmark util quicksort readfile tokenize)
 (modules msort_strings)
 (modes native))

(executable
 (name primes)
 (libraries cla seqbasis benchmark)
 (modules primes)
 (modes native))
