(include_subdirs unqualified)

(executable
 (name msort_ints)
 (libraries cla seq merge benchmark util quicksort)
 (modules msort_ints)
 (modes native))

(executable
 (name msort_strings)
 (libraries cla seq merge benchmark util quicksort readfile tokenize)
 (modules msort_strings)
 (modes native))

(executable
 (name dedup_strings)
 (libraries util cla seq benchmark hashset readfile tokenize)
 (modules dedup_strings)
 (modes native))

(executable
 (name primes)
 (libraries cla seqbasis benchmark)
 (modules primes)
 (modes native))

(executable
 (name sparse_mxv)
 (libraries cla seqbasis seq benchmark util)
 (modules sparse_mxv)
 (modes native))

(executable
 (name tokens)
 (libraries util cla benchmark readfile bytes tokenize)
 (modules tokens)
 (modes native))

(executable
 (name game_of_life)
 (libraries cla domainslib unix benchmark)
 (modules game_of_life)
 (modes native))

(executable
 (name lu_decomp)
 (libraries cla domainslib unix benchmark)
 (modules lu_decomp)
 (modes native))

(executable
 (name binarytrees5)
 (libraries cla domainslib unix benchmark)
 (modules binarytrees5)
 (modes native))

(executable
 (name raytracer)
 (libraries cla domainslib unix benchmark)
 (modules raytracer)
 (modes native))

(executable
 (name nbody)
 (libraries cla domainslib unix benchmark)
 (modules nbody)
 (modes native))
